<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/plant_logo"
        android:layout_width="171dp"
        android:layout_height="177dp"
        android:src="@drawable/plant_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <RelativeLayout
        android:id="@+id/form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="54dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_email"
        app:layout_constraintVertical_bias="0.056"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="54dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#75CF62"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_confirm"
        app:layout_constraintVertical_bias="0.229" />

    <RelativeLayout
        android:id="@+id/form_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_email"
        app:layout_constraintVertical_bias="0.424"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="54dp"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:padding="12dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/register"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>